<resources>
    <string name="app_name">iSeva</string>
    <string name="app_businessextra">Here you can upload offers or post job requirements etc. for your business!</string>
    <string name="title_activity_activity__home">iSeva</string>
    <string name="title_activity_service_provider">Service Provider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_city">Choose City</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="title_activity_activity__login__merchant">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This Username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_activity__profile__merchant">Activity_Profile_Merchant</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_activity__details__show">Activity_Details_Show</string>
    <string name="about_us">Now just one tap far away from your all daily needs. iSeva app is a local search engine help you to search health services, educational institutes, hotel and restaurants, property, professionals, shopping zone, beauty parlor, boutique, freelancer and many more details of your city business.\n\n 1. iSeva app help you to get best offer from your favorite business on just one tap.\n 2. iSeva app help to get jobs for job seekers.\n 3. iSeva help you to add your business digitally.\n\n So download iSeva app and become part of digital india.</string>

    <string name="agreement">Merchant should not post any unwanted material on his profile otherwise we hold the right to terminate Merchant profile from iSeva without any prior notice.\n\niSeva is not responsible if merchant is found involved in any kind of illegal business.\n\nThis terms of use shall be governed and construed in accordance with the laws in India. Any dispute arising hereunder shall be subject to the exclusive jurisdiction of the courts in Sri Ganganagar(Raj.), India.</string>
    <string name="disclaimer">
        iSeva communicates information provided and created by advertisers, content partners, software developers, publishers, marketing agents, employees, users, resellers and other third parties. While every attempt has been made to ascertain the authenticity of the content on the Platforms iSeva has no control over content, the accuracy of such content, integrity or quality of such content and the information on our pages, and material on the Platforms may include technical inaccuracies or typographical errors, and we make no guarantees, nor can we be responsible for any such information, including its authenticity, currency, content, quality, copyright compliance or legality, or any other intellectual property rights compliance, or any resulting loss or damage. Further, we are not liable for any kind of damages, losses or action arising directly or indirectly due to any content, including any errors or omissions in any content, access and or use of the content on the Platforms or any of them including but not limited to content based decisions resulting in loss of data, revenue, profits, property, infection by viruses etc.\n\nAll of the data on products and promotions including but not limited to, the prices and the availability of any product or service or any feature thereof, is subject to change without notice by the party providing the product or promotion. You should use discretion while using the Platforms.\n\niSeva reserves the right, in its sole discretion and without any obligation, to make improvements to, or correct any error or omissions in, any portion of the Platforms. Where appropriate, we will endeavor to update information listed on the Website on a timely basis, but shall not be liable for any inaccuracies.\n\nIn no event shall iSeva be liable to any user on account of such user\'s use, misuse or reliance on the platforms for any damages whatsoever, including direct, special, punitive, indirect, consequential or incidental damages or damages for loss of profits, revenue, use, or data whether brought in warranty, contract, intellectual property infringement, tort (including negligence) or other theory. iSeva  does not assume any legal liability or responsibility for the accuracy, completeness, or usefulness of any information, apparatus, product or process disclosed on the platforms or other material accessible from the platforms.\n\nThe user of the platforms assumes all responsibility and risk for the use of this platforms and the internet generally. The foregoing limitations shall apply notwithstanding any failure of the essential purpose of any limited remedy and to the fullest extent permitted under applicable law.
     </string>

    <string name="agreement_employee">Person should not post any unwanted material on his profile otherwise we hold the right to terminate profile from iSeva without any prior notice.\n\nThis terms of use shall be governed and construed in accordance with the laws in India. Any dispute arising hereunder shall be subject to the exclusive jurisdiction of the courts in Sri Ganganagar(Raj.), India.</string>


    <string name="header_text_city_from">Select Origin City</string>
    <string name="header_text_city_to">Select Destination City</string>


    <string name="toast_crash">Seems some problem, restarting app.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="SeatNo">SeatNo</string>
    <string name="IsSelected">IsSelected</string>
    <string name="Gender">Gender</string>
    <string name="Deck">Deck</string>
    <string name="IsAc">IsAc</string>
    <string name="IsSleeper">IsSleeper</string>
    <string name="Fare">Fare</string>
    <string name="Offer_Fare">Offer_Fare</string>
    <string name="Seat_Type">Seat_Type</string>


    <string name="tab_tag">tab_tag</string>
    <string name="title_activity_loading">Activity_loading</string>


    <string name="radio_group_id">radio_group</string>
    <string name="radio_mr">radio_mr</string>
    <string name="radio_mrs">radio_mrs</string>
    <string name="radio_ms">radio_ms</string>
    <string name="edittext_name">edittext_name</string>
    <string name="edittext_age">age_edittext</string>
    <string name="Rs">\u20B9</string>

    <string name="server_error_title">Something went wrong</string>
    <string name="server_error_message_try_again">Error occured at server, Please try again.</string>
    <string name="error_message_detail_text">Details : </string>
    <string name="alert_cancel_btn_text_retry">Retry</string>
    <string name="alert_cancel_btn_text_cancel">Cancel</string>
    <string name="alert_cancel_btn_text_ok">Ok</string>

    <string name="internet_connection_error_title">No Internet Connection!</string>
    <string name="internet_connection_error_message_try_again">We can not detect any internet connectivity. Please check your internet connection and try again.</string>
    <string name="internet_connection_error_message">We can not detect any internet connectivity. Please check your internet connection.</string>
    <string name="validating_error_title">Error</string>

    <string name="slow_internet_title">Network/Connection error</string>
    <string name="slow_internet_error">The server is taking too long time to respond OR something is wrong with your internet connection. Please try again later.</string>


    <!-- bus routes screen -->

    <string name="bus_id">bus_id</string>
    <string name="bus_label">bus_label</string>
    <string name="arr_time">arr_time</string>
    <string name="arr_date_time">arr_date_time</string>
    <string name="dep_time">dep_time</string>
    <string name="dep_date_time">dep_date_time</string>
    <string name="company_name">company_name</string>
    <string name="commition_percentage">comm_pct</string>

    <string name="is_ac">is_ac</string>

    <!--filter screen strings start-->
    <string name="no_filter_selectet">No filter selected</string>
    <string name="label_bus_type">Bus Type</string>
    <string name="bus_type_AC">A/C</string>
    <string name="bus_type_sleeper">Sleeper</string>
    <string name="bus_type_Multi_Axle">Multi Axle</string>
    <string name="label_bus_brand">Bus Brand</string>
    <string name="bus_brand_volvo">Volvo</string>
    <string name="bus_brand_mercedes">Mercedes</string>
    <string name="bus_brand_scania">Scania</string>
    <string name="label_price">Price</string>
    <string name="tag_id">tag_id</string>
    <string name="tag_name">tag_name</string>
    <string name="no_buses_found">Sorry, No Buses Found :(</string>


    <!--filter screen string end-->

    <!--itinerary screen strings start-->
    <string name="timer_string">mins left to make payment &amp; confirm booking</string>
    <string name="travellers">Travellers</string>
    <string name="seat">SeatNo.</string>
    <string name="boarding_point">Boarding Point</string>
    <string name="boarding_time">Boarding Time</string>
    <string name="cancelation_policy">Cancellation Policy</string>
    <string name="itinerary_header_text">Review Itinerary</string>
    <string name="ticket_confirmation">Ticket Confirmation</string>

    <string name="max_uses_count">max_uses_count</string>
    <string name="discount_percentage">discount_percentage</string>
    <string name="discount_amount">discount_amount</string>
    <string name="promocode_id">promocode_id</string>
    <string name="coupan_code">coupan_code</string>

    <!--itinerary screen strings end-->


    <!-- show booked ticket activity start -->


    <string name="activity_show_booked_ticket_tag_id">activity_show_booked_ticket_tag_id</string>
    <string name="activity_show_booked_ticket_tag_pnr_no">activity_show_booked_ticket_tag_pnr_no</string>
    <string name="activity_show_booked_ticket_tag_ticket_no">activity_show_booked_ticket_tag_ticket_no</string>
    <string name="activity_show_booked_ticket_tag_iscancelable">activity_show_booked_ticket_tag_iscancelable</string>
    <string name="activity_show_booked_ticket_tag_payment_id">activity_show_booked_ticket_tag_iscancelable</string>
    <string name="activity_show_booked_ticket_tag_total_fare">activity_show_booked_ticket_tag_total_fare</string>
    <string name="activity_show_booked_ticket_tag_extra_charge">activity_show_booked_ticket_tag_extra_charge</string>

    <!-- used in show booking ticket short layout -->
    <string name="booking_detail_short_layout_booked_date">booking_detail_short_layout_booked_date</string>
    <string name="booking_deatail_short_layout_from_city">booking_deatail_short_layout_from_city</string>
    <string name="booking_deatail_short_layout_to_city">booking_deatail_short_layout_to_city</string>


    <!-- For FaceBook Sahring -->
    <string name="facebook_app_id">1052680501540957</string>

</resources>
